[package]
name = "autocompleted"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
moka = { version = "0.12", features = ["future"] }
config = { version = "0.15", default-features = false }
deadpool-postgres = { version = "0.14", features = ["serde", "rt_tokio_1"] }
derive_more = "0.99"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-pg-mapper = "0.2"
tokio-pg-mapper-derive = "0.2"
tokio-postgres = "0.7"
unicode-normalization = "0.1"
log = "0.4"
env_logger = "0.11"
